# Chaoxing-Agent

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
chaoxing_agent/: __init__.py  __main__.py  async_state_machine.py  calibration_subprocess.py  calibration_wizard.py  config_holder.py  paths.py  pause_gate.py  rpc_handlers.py  rpc_server.py  rpc_types.py
config/: .env.example  config.json  config.json.example  config.json.example.md  model_services.json  model_services.json.example
core/: __init__.py  click_executor.py  errors.py  screen_capture.py  state_machine.py  trace_logger.py  viewport_selector.py  window_selector.py
docs/: architecture.md  integration-guide.md  runbook.md  self-contained-build.md
models/: base_client.py  google_client.py  json_extract.py  model_config.py  openai_client.py  text_solver.py  vision_parser.py
prompts/: solver_prompt.txt  vision_prompt.txt
schemas/: solver_schema.py  vision_schema.py
scripts/: build_python_sidecar.ps1  build_release.ps1  check_release_prereqs.ps1  smoke_sidecar_rpc.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  python_proc.rs  rpc_bridge.rs
tests/: __init__.py  test_async_state_machine.py  test_async_state_machine_safety.py  test_click_executor.py  test_config_holder.py  test_config_init.py  test_config_init_path.py  test_coordinate_mapper.py  test_env_settings.py  test_json_extract.py  test_main_target_persistence.py  test_model_and_client.py  test_openai_exception_wrapping.py  test_package_structure.py  (+12 more)
(+32 files in other folders)
